[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "2.0.0"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
futures = "0.3"
envy = "0.4.2"
serde = "1.0.193"
serde_json = "1.0.111"
secp256k1 = "0.28.2"
